workspace = { members = ["examples/example"] }

[package]
name = "cryptotools"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "cryptotools is a cryptography library"
readme = "README.md"
repository = "https://github.com/heroesofcode/cryptotools"
exclude = [".github/**"]

[dependencies]
md5 = "0.7.0"
