workspace = { members = ["examples/example"] }

[package]
name = "cryptotools"
version = "0.3.0"
edition = "2024"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "cryptotools is a cryptography library"
readme = "README.md"
repository = "https://github.com/heroesofcode/cryptotools"
exclude = [".github/**", "examples/*"]

[dependencies]
md5 = "0.8.0"